--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ allprojects {
 
     repositories {
 
+        maven { url 'https://jitpack.io' }
+
         maven {
             name = "Fuzs Mod Resources"
             url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
