--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ allprojects {
 
     repositories {
 
+        maven {
+            url "https://dl.bintray.com/jbullet/jbullet"
+        }
+
         maven { url 'https://jitpack.io' }
 
         maven {
